# stocks-assist

./: .cursorrules  .gitignore  Dockerfile  ENDPOINTS.md  README.md  README2.md  README3.md  activate_venv.sh  app.py  auto_commit.sh  build_stock_list_fmp.py  bulk_perplexity_comments.py  candlestick.html  daily_price_update.py  data_fetcher.py  docker-compose.dev.yml  docker-compose.oracle.yml  docker-compose.yml  get_compute_instance_ready.sh  get_ind_ticker_float_fmp.py  initial_seeding_db.py  initialize_db.py  main.py  manage-env.sh  models.py  momentum_debug.py  nasdaq100_list.csv  perplexity_test.py  pyproject.toml  refresh_market_events.py  requirements.txt  researchlist.csv  sic_mapper.py  sp500_list.csv  start.sh  test_alpha_vantage_connection.py  test_fmp_connection.py  update_rsi.py
.venv-stock-assist/: pyvenv.cfg
README/: ARCHITECTURE.md  IDEAS.md  LAYOUT_HOMEPAGE.md  README.md  RELATIVESTRENGTH.md  SCREENING_AGENT.md  SURFACE.md  VISION.md
archive/: data_fields_providers.xlsx  docker-compose.dev.yml  get_compute_instance_ready.sh
backend/: Dockerfile  app.py  app_old.py  docker-compose.yml  models.py  requirements.txt  test_anthropic_api.py
daily_screener/: README.md  __init__.py  config.py  pipeline.py  run.py
db_scripts/: fmp_utils.py  logger.py  schema_manager.py
docker/: backend.Dockerfile  frontend.Dockerfile  generate-ssl.sh  git_askpass_env.sh  nginx.conf  start.sh
downtrend_screener/: Dockerfile  Untitled
frontend/: Dockerfile  app.py  package.json
frontend_old/: app.py
market_brief/: README.md  __init__.py  config.py  pipeline.py  (+3 more)
(+336 files in other folders)
