[project]
name = "stocks-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "dash==2.15.0",
    "flask==3.0.2",
    "pandas==2.2.1",
    "pandoc>=2.4",
    "plotly==5.19.0",
    "polygon-api-client==1.12.3",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "requests==2.31.0",
    "sqlalchemy==2.0.27",
]
